--- a/index.html
+++ b/index.html
@@ -23,7 +23,24 @@
             <hr>
           </div>
           <div class="col-lg-12 my-auto">
-            <button class="btn btn-primary btn-xl">Find Outa More</button>
+          	 <form action="https://MarriCorp.us20.list-manage.com/subscribe/post?u=a931a06513906cad18f245364&amp;id=cfe4883878" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+
+
+          	<div id="mc_embed_signup_scroll">
+   <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                 <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_a931a06513906cad18f245364_cfe4883878" tabindex="-1" value=""></div>
+                 <div class="clear"></div>
+
+                 </div>
+
+                 <input type="submit" class="btn btn-primary btn-xl" value="Find Out More" name="subscribe" id="mc-embedded-subscribe" >
+
+             
+             	
+            </form>
+
+
+
           </div>
         </div>
       </div>
